[project]
name = "trip-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "streamlit>=1.45.1",
    "ipykernel>=6.29.5",
    "supabase>=2.15.2",
    "fastapi>=0.115.12",
    "uvicorn>=0.34.3",
    "python-dotenv>=1.1.0",
]

[project.scripts]
trip-tracker = "streamlit run:app --server.address 0.0.0.0 --server.port 8501"

tool.uv.packages = true
